--- a/templates/kinsdb/BRNC/brnc.html
+++ b/templates/kinsdb/BRNC/brnc.html
@@ -191,7 +191,7 @@
                 <tr>
                   <td>법률</td>
                   <td>
-                    <li class="data" onclick=location.href="{% url 'brnc' %}"><b>원안법 제63조</b></li>
+                    <li><b>원안법 제63조</b></li>
                     방사성페기물관리시설등의 건설, 운영허가
                     <li><b>원안법 시행령 제96조</b></li>
                     방사성폐기물관리시설등의 건설, 운영허가 신청
@@ -209,20 +209,20 @@
                   <td>
                     <li><b>The Act on Nuclear Activities (1984:3)</b></li>
                     원자력활동법
-                    <li><b>The Radiation Protection Act (2018:396)</b></li>
+                    <li class="data" onclick=location.href="#"><b>The Radiation Protection Act (2018:396)</b></li>
                     방사선방호법
-                    <li><b>Radiation Protection Ordinance (2018:506)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Radiation Protection Ordinance (2018:506)</b></li>
                     방사선방호조례
-                    <li><b>The Environmental Code (1998:808)</b></li>
+                    <li class="data" onclick=location.href="#"><b>The Environmental Code (1998:808)</b></li>
                     환경법
                   </td>
 
                   <td>
-                    <li><b>Nuclear Engergy Act</b></li>
+                    <li class="data" onclick=location.href="#"><b>Nuclear Engergy Act</b></li>
                     원자력 에너지 법
-                    <li><b>Nuclear Engergy Decree</b></li>
+                    <li class="data" onclick=location.href="#"><b>Nuclear Engergy Decree</b></li>
                     원자력 에너지 법령
-                    <li><b>Radiation Decree</b></li>
+                    <li class="data" onclick=location.href="#"><b>Radiation Decree</b></li>
                     방사선 법
                   </td>
 
@@ -240,16 +240,16 @@
                     기본법
                     <li><b>Atomic Energy Act (Atg)</b></li>
                     원자력 에너지 법
-                    <li><b>Repository Site Selection Act (StandAG)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Repository Site Selection Act (StandAG)</b></li>
                     처분시설 부지 선정에 관한 법
-                    <li><b>Radiation Protection Ordinance (StrlSchV)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Radiation Protection Ordinance (StrlSchV)</b></li>
                     방사선방호 조례
                   </td>
 
                   <td>
                     <li><b>Nuclear Safety and Control Act</b></li>
                     원자력안전 및 통제법
-                    <li><b>Nuclear Fuel Waste Act</b></li>
+                    <li class="data" onclick=location.href="#"><b>Nuclear Fuel Waste Act</b></li>
                     핵연료 폐기물 법
                   </td>
 
@@ -280,13 +280,13 @@
                   </td>
 
                   <td>
-                    <li><b>10CFR Part 60</b></li>
+                    <li class="data" onclick=location.href="{% url 'docs-details' pk=1 %}"><b>10CFR Part 60</b></li>
                     지층처분장에 고준위방폐물 처분
-                    <li><b>10CFR Part 63</b></li>
+                    <li class="data" onclick=location.href="#"><b>10CFR Part 63</b></li>
                     네바다주 유카마운틴 지층처분장에서의 고준위방폐물 처분
-                    <li><b>40CFR Part 191</b></li>
+                    <li class="data" onclick=location.href="#"><b>40CFR Part 191</b></li>
                     사용후핵연료, 고준위 및 TRU 방폐물의 관리와 처분을 위한 환경방사선방호기준
-                    <li><b>40CFR Part 197</b></li>
+                    <li class="data" onclick=location.href="#"><b>40CFR Part 197</b></li>
                     네바다주 유카마운틴을 위한 공중의 보건 및 환경방사선방호의 기준
                   </td>
 
@@ -300,18 +300,18 @@
                   </td>
 
                   <td>
-                    <li><b>Radiation and Nuclear Safety Authority Regulation on the Safety of Disposal of Nuclear Waste (STUK Y/4/2018)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Radiation and Nuclear Safety Authority Regulation on the Safety of Disposal of Nuclear Waste (STUK Y/4/2018)</b></li>
                     원자력폐기물 처분 안전에 관한 방사선 및 원자력안전 당국 규정
                   </td>
 
                   <td></td>
 
                   <td>
-                    <li><b>Final Disposal of Heat Generating Radioactive Waste (BMU10)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Final Disposal of Heat Generating Radioactive Waste (BMU10)</b></li>
                     발열방폐물의 최종처분에 관한 규정
-                    <li><b>Safety Criteria the Final Disposal of Radioactive Waste in a Mine </b></li>
+                    <li class="data" onclick=location.href="#"><b>Safety Criteria the Final Disposal of Radioactive Waste in a Mine </b></li>
                     방폐물의 광산 최종처분시 안전 요건
-                    <li><b>Verordnung über Anforderungen und Verfahren zur Entsorgung radioaktiver Abfälle (Atomrechtliche Entsorgungsverordnung – AtEV)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Verordnung über Anforderungen und Verfahren zur Entsorgung radioaktiver Abfälle (Atomrechtliche Entsorgungsverordnung – AtEV)</b></li>
                   </td>
 
                   <td></td>
@@ -327,32 +327,32 @@
                   <td></td>
 
                   <td>
-                    <li><b>Safety in the use of nuclear energy (Guide YVL A.1)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Safety in the use of nuclear energy (Guide YVL A.1)</b></li>
                     원자력 이용 안전관리
                     <li><b>Site for nuclear facility (GUIDE YVL A.2)</b></li>
                     원자력시설 부지에 관한 규제지침
-                    <li><b>Release Barriers of Spent Nuclear Fuel Disposal Faciltiy (GUIDE YVL D.7)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Release Barriers of Spent Nuclear Fuel Disposal Faciltiy (GUIDE YVL D.7)</b></li>
                     사용후핵연료 처분시설의 방벽에 대한 규제지침
-                    <li><b>DISPOSAL OF NUCLEAR WASTE(STUK-YVL D.5)</b></li>
+                    <li class="data" onclick=location.href="#"><b>DISPOSAL OF NUCLEAR WASTE(STUK-YVL D.5)</b></li>
                     원자력폐기물 처분에 관한 규제지침
                   </td>
 
                   <td>
                     <li><b>RFS (Basic Safety Rules)</b></li>
                     기본안전규칙 등
-                    <li><b>RFS I.2 Safety objectives and design bases for surface facilities intended for long-term disposal of solid</b></li>
+                    <li class="data" onclick=location.href="#"><b>RFS I.2 Safety objectives and design bases for surface facilities intended for long-term disposal of solid</b></li>
                     RFS I.2 고체의 장기 처분을 위한 지상 시설의 안전 목표 및 설계 기반
                     <li><b>ASN Guides 등</b></li>
-                    <li><b>Safety Guide on the final disposal of radioactive waste in deep geological formations (February 2008)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Safety Guide on the final disposal of radioactive waste in deep geological formations (February 2008)</b></li>
                     깊은 지층에서 방사성폐기물 최종처분에 관한 안전지침
                   </td>
 
                   <td></td>
 
                   <td>
-                    <li><b>Guidance on Deep Geological Repository Site Characterization (Regulatory Document, REGDOC-1.2.1)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Guidance on Deep Geological Repository Site Characterization (Regulatory Document, REGDOC-1.2.1)</b></li>
                     심지층처분시설 부지특성평가에 대한 지침
-                    <li><b>Management of radioactive waste Volume1 (REGDOC-2-11-1)</b></li>
+                    <li class="data" onclick=location.href="#"><b>Management of radioactive waste Volume1 (REGDOC-2-11-1)</b></li>
                     폐기물 관리, 제 1권 : 방사성폐기물 관리
                   </td>
 
