--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -5,9 +5,6 @@
 <!-- Choise Css -->
 <link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
 <style>
-
-
-
   th {
     font-weight: 800 !important;
     background-color: whitesmoke !important;
@@ -28,7 +25,6 @@
   td:nth-child(1) {
     width: 10px;
   }
-
 </style>
 {% endblock extra_css %}
 
@@ -186,8 +182,9 @@
                   <td></td>
                   <td></td>
                   <td></td>
-
                 </tr>
+
+                
                 <tr>
                   <th>처분장 설계</th>
                   <td>
@@ -196,9 +193,9 @@
                   <td>
                     <p class="data" onclick=location.href="{% url 'report' report_num=16 %}">16) 핀란드 ONKALO 건설 관련 규제 검토 사례</p>
                     <p class="data" onclick=location.href="{% url 'report' report_num=17 %}">17) 스웨덴 토지환경법원의 인허가 보고서 규제 검토 사례</p>
-                    <p class="data" onclick=location.href="{% url 'report' report_num=18 %}">18) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
-                    <p class="data" onclick=location.href="{% url 'report' report_num=19 %}">19) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
-                    <p class="data" onclick=location.href="{% url 'report' report_num=20 %}">20) STUK 건설 인허가 검토 사례 (핀란드, 공학적방벽)</p>
+                    <p class="data" onclick=location.href="#">18) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
+                    <p class="data" onclick=location.href="#">19) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
+                    <p class="data" onclick=location.href="#">20) STUK 건설 인허가 검토 사례 (핀란드, 공학적방벽)</p>
                   </td>
                   <td></td>
                   <td></td>
@@ -252,6 +249,8 @@
                   <td></td>
                   <td></td>
                 </tr>
+
+
                 <tr>
                   <th>폐쇄 후 안전성 평가</th>
                   <td></td>
@@ -277,7 +276,6 @@
                   <td>
                     <p>24) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
                     <p>25) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
-
                   </td>
                   <td>EPG</td>
                   <td></td>
@@ -304,8 +302,8 @@
                   <td></td>
                   <td>EPG</td>
                   <td></td>
-
                 </tr>
+
                 <tr>
                   <th colspan="2">불확실성 관리</th>
                   <td>EPG</td>
@@ -322,8 +320,8 @@
                   <td></td>
                   <td>EPG</td>
                   <td></td>
-
                 </tr>
+
                 <tr>
                   <th colspan="2">한계점, 통제 및 조건</th>
                   <td>EPG</td>
@@ -344,7 +342,6 @@
                   <td></td>
                   <td>EPG</td>
                   <td></td>
-
                 </tr>
 
               </tbody>
