--- a/templates/kinsdb/BRNC/BRNC_database.html
+++ b/templates/kinsdb/BRNC/BRNC_database.html
@@ -20,6 +20,8 @@
       <div class="col-md-6">
         <div class="text-center text-white">
           <h2 class="mb-4">규제기준 데이터베이스</h2>
+          <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'brnc' %}">메인화면 돌아가기</button>
+
         </div>
       </div>
       <!--end col-->
@@ -147,7 +149,7 @@
               <div class="col-lg-3">
                 <div>
                   <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i>검색</button>
-                  <a href="{% url 'brnc' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply"></i></a>
+                  <a href="{% url 'regulation_database' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply"></i></a>
                 </div>
               </div>
             </div>
