--- a/templates/rnd/KAERI_case.html
+++ b/templates/rnd/KAERI_case.html
@@ -57,20 +57,15 @@
           <div class="candidate-list-box card mt-4">
             <div class="card-body p-4">
               <div class="row align-items-center">
-                <div class="col-auto">
-                  <div class="candidate-list-images">
-                    <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
-                  </div>
-                </div>
-                <!--end col-->
-
                 <div class="col-lg-6">
                   <div class="candidate-list-content mt-3 mt-lg-0">
-                    <h5 class="fs-19 mb-1"><a href="#" class="primary-link"> KAERI 1차 보고서 </a></h5>
+                    <h5 class="fs-19 mb-1"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
                     <p class="text-muted mb-2"> {{ doc.writer.name }} </p>
                     <ul class="list-inline mb-0 text-muted">
                       <li class="list-inline-item">
-                        <i class="mdi mdi-map-marker"></i> 접수일자: {{ doc.regist_date|date:'Y-m-d' }}
+                        <i class="mdi mdi-calendar-clock"></i> 2023-04-18
+                        <i class="mdi mdi-account-circle"></i> 홍길동
+
                       </li>
                     </ul>
                   </div>
