--- a/templates/rnd/case_detail.html
+++ b/templates/rnd/case_detail.html
@@ -50,7 +50,6 @@
     <div class="row justify-content-center">
 
       <div class="col-lg-10">
-        <form action="{% url 'rnd:case' %}">
           <div class="mb-3">
             <label for="dateControlInput" class="form-label">작성 일자</label>
             <input type="date" class="form-control" id="dateControlInput" readonly>
@@ -60,63 +59,41 @@
 
           <div class="mb-3">
             <label for="organization" class="form-label">기관 구분</label>
-              <select class="form-select">
-                <option value="">기관</option>
-                <option value="kins">KINS</option>
-                <option value="kaeri">KAERI</option>
-              </select>
+            <input type="text" class="form-control" id="" placeholder="KAERI" readonly>
           </div>
 
 
           <div class="mb-3">
             <label for="messageControlTextarea" class="form-label">피드백 요약</label>
-            <textarea class="form-control" id="messageControlTextarea" rows="4" placeholder="내용"></textarea>
+            <textarea class="form-control" id="messageControlTextarea" rows="4" placeholder="내용" readonly></textarea>
           </div>
           <div class="mb-4">
             <label class="form-label" for="inputGroupFile01">검토 보고서</label>
-            <input type="file" class="form-control" id="inputGroupFile01">
+            <input type="file" class="form-control" id="inputGroupFile01" readonly>
           </div>
           <div class="mb-3">
             <label for="emailControlInput2" class="form-label">담당자</label>
-            <input type="text" class="form-control" id="emailControlInput2" placeholder="담당자명">
+            <input type="text" class="form-control" id="emailControlInput2" placeholder="담당자명" readonly>
           </div>
           <div class="m-4" style="text-align:center">
-            <button type="button" class="btn btn-soft-primary" style="width:15%" onclick="temp_save()">임시저장</button>
-            <button type="button" class="btn btn-primary" style="width:15%" data-bs-toggle="modal" data-bs-target="#saveModal">저장</button>
+            <button type="button" class="btn btn-primary" style="width:15%" onclick=location.href="{% url 'rnd:KAERI_case' %}">목록</button>
 
-            <div id="saveModal" class="modal fade" tabindex="-1" aria-labelledby="saveModalLabel" style="display: none;" aria-hidden="true">
+
+
+            <button type="button" class="btn btn-soft-dark" style="width:15%" data-bs-toggle="modal" data-bs-target="#deleteModal">삭제</button>
+            <div id="deleteModal" class="modal fade" tabindex="-1" aria-labelledby="deleteModalLabel" style="display: none;" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title mt-0" id="saveModalLabel">저장하기</h5>
+                    <h5 class="modal-title mt-0" id="deleteModalLabel">삭제하기</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    <p style="margin:1em">저장된 게시글은 수정할 수 없습니다. 저장하시겠습니까?</p>
+                    <p style="margin:1em">삭제한 게시글은 복구 할 수 없습니다. 삭제하시겠습니까?</p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">취소</button>
-                    <button type="submit" class="btn btn-primary waves-effect waves-light">확인</button>
-                  </div>
-                </div><!-- /.modal-content -->
-              </div><!-- /.modal-dialog -->
-            </div><!-- SIMPLE MODALS -->
-
-
-            <button type="button" class="btn btn-soft-dark" style="width:15%" data-bs-toggle="modal" data-bs-target="#toListModal">목록</button>
-            <div id="toListModal" class="modal fade" tabindex="-1" aria-labelledby="toListModalLabel" style="display: none;" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title mt-0" id="toListModalLabel">목록으로</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <p style="margin:1em">작성 중인 게시글이 저장되지 않습니다.</p>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">취소</button>
-                    <button type="submit" class="btn btn-primary waves-effect waves-light">확인</button>
+                    <button type="button" class="btn btn-primary waves-effect waves-light" onclick=location.href="{% url 'rnd:KAERI_case' %}">확인</button>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -124,7 +101,6 @@
 
 
           </div>
-        </form>
       </div>
     </div>
   </div>
