--- a/templates/rnd/KAERI_case.html
+++ b/templates/rnd/KAERI_case.html
@@ -45,38 +45,56 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-10">
-        <h6>검토 진행 사항</h6>
-        <p class="text-muted">검토 진행 사항에 관한 내용 또는 페이지</p>
-        <div class="border-bottom"></div>
-
+        <h6>검토 작업 목록</h6>
+        <div class="mb-2 border-bottom"></div>
+        <p class="text-muted">진행중 / 완료 목록 확인</p>
       </div>
 
       <div class="col-lg-10">
         <div class="candidate-list">
-
-          <div class="candidate-list-box card mt-4">
+          <div class="candidate-list-box card mt-2">
             <div class="card-body p-4">
-              <div class="row align-items-center">
-                <div class="col-lg-6">
-                  <div class="candidate-list-content mt-3 mt-lg-0">
-                    <h5 class="fs-19 mb-1"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
-                    <p class="text-muted mb-2"> {{ doc.writer.name }} </p>
+                  <div class="candidate-list-content mt-3 mt-lg-0" style="display:flex; justify-content:space-between">
+                    <h5 class="fs-19 mb-0" style="display:inline"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
                     <ul class="list-inline mb-0 text-muted">
                       <li class="list-inline-item">
                         <i class="mdi mdi-calendar-clock"></i> 2023-04-18
                         <i class="mdi mdi-account-circle"></i> 홍길동
-
                       </li>
                     </ul>
                   </div>
-                </div>
-                <!--end col-->
-
-                <!--end col-->
-              </div>
-              <!--end row-->
             </div>
           </div>
+
+          <div class="candidate-list-box card mt-2">
+            <div class="card-body p-4">
+                  <div class="candidate-list-content mt-3 mt-lg-0" style="display:flex; justify-content:space-between">
+                    <h5 class="fs-19 mb-0" style="display:inline"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
+                    <ul class="list-inline mb-0 text-muted">
+                      <li class="list-inline-item">
+                        <i class="mdi mdi-calendar-clock"></i> 2023-04-18
+                        <i class="mdi mdi-account-circle"></i> 홍길동
+                      </li>
+                    </ul>
+                  </div>
+            </div>
+          </div>
+
+          <div class="candidate-list-box card mt-2">
+            <div class="card-body p-4">
+                  <div class="candidate-list-content mt-3 mt-lg-0" style="display:flex; justify-content:space-between">
+                    <h5 class="fs-19 mb-0" style="display:inline"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
+                    <ul class="list-inline mb-0 text-muted">
+                      <li class="list-inline-item">
+                        <i class="mdi mdi-calendar-clock"></i> 2023-04-18
+                        <i class="mdi mdi-account-circle"></i> 홍길동
+                      </li>
+                    </ul>
+                  </div>
+            </div>
+          </div>
+
+          
         </div>
       </div>
     </div>
