--- a/templates/rnd/case.html
+++ b/templates/rnd/case.html
@@ -10,6 +10,54 @@
     height: 100px !important;
     max-width: 80% !important;
   }
+
+  .progressbar {
+    counter-reset: step;
+  }
+  .progressbar li {
+    list-style: none;
+    display: inline-block;
+    width: 20%;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+  }
+  .progressbar li:before {
+    content: counter(step);
+    counter-increment: step;
+    width: 30px;
+    height: 30px;
+    line-height : 25px;
+    border: 3px solid #ddd;
+    border-radius: 100%;
+    display: block;
+    text-align: center;
+    margin: 0 auto 10px auto;
+    background-color: #fff;
+  }
+  .progressbar li:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #ddd;
+    top: 15px;
+    left: -50%;
+    z-index : -1;
+  }
+  .progressbar li:first-child:after {
+    content: none;
+  }
+  .progressbar li.active {
+    color: var(--bs-primary);
+  }
+  .progressbar li.active:before {
+    border-color: var(--bs-primary);
+  }
+  .progressbar li.active + li:after {
+    background-color: var(--bs-primary);
+  }
+
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -48,13 +96,18 @@
         <div id="tabs">
           <div class="card-body p-4">
             <div>
-              <h6 class="card-title">검토 진행 사항</h6>
-              <button type="button" class="btn btn-primary" onclick=location.href="{% url 'rnd:create_case' %}">글 작성</button>
+              <h6 class="card-title">검토 진행 프로세스</h6>
+              <div class="mb-2 border-bottom"></div>
+              <p class="text-muted">검토 진행 단계 안내</p>
+              <ul class="progressbar">
+                <li class="active">1. 서류접수</li>
+                <li class="active">2. 적합판정</li>
+                <li>3. 종합검토</li>
+                <li>4. 검토완료</li>
 
-              <div class="p-4 border-bottom"></div>
-              <p class="text-muted">검토 진행 사항에 관한 내용 또는 페이지</p>
+              </ul>
 
-
+              <button type="button" class="btn btn-primary" style="float:right" onclick=location.href="{% url 'rnd:create_case' %}">검토/요청</button>
             </div>
             <!--end basic-tabs-->
 
