--- a/templates/rnd/case_detail.html
+++ b/templates/rnd/case_detail.html
@@ -50,57 +50,65 @@
     <div class="row justify-content-center">
 
       <div class="col-lg-10">
-          <div class="mb-3">
-            <label for="dateControlInput" class="form-label">작성 일자</label>
-            <input type="date" class="form-control" id="dateControlInput" readonly>
-          </div>
+
+        <div class="p-2" style="display:inline">
+          <label for="dateControlInput" class="form-label">작성 일자</label>
+          <i class="mdi mdi-calendar-clock"></i>2023-04-18
+        </div>
+
+        <div class="p-2" style="display:inline">
+          <label for="dateControlInput" class="form-label">작성자</label>
+          <i class="mdi mdi-account-circle"></i> 홍길동
+        </div>
+
+        <div class="border-bottom"></div>
 
 
 
-          <div class="mb-3">
-            <label for="organization" class="form-label">기관 구분</label>
-            <input type="text" class="form-control" id="" placeholder="KAERI" readonly>
-          </div>
+        <div class="mb-3">
+          <label for="organization" class="form-label">기관 구분</label>
+          <input type="text" class="form-control" id="" placeholder="KAERI" readonly>
+        </div>
 
 
-          <div class="mb-3">
-            <label for="messageControlTextarea" class="form-label">피드백 요약</label>
-            <textarea class="form-control" id="messageControlTextarea" rows="4" placeholder="내용" readonly></textarea>
-          </div>
-          <div class="mb-4">
-            <label class="form-label" for="inputGroupFile01">검토 보고서</label>
-            <input type="file" class="form-control" id="inputGroupFile01" readonly>
-          </div>
-          <div class="mb-3">
-            <label for="emailControlInput2" class="form-label">담당자</label>
-            <input type="text" class="form-control" id="emailControlInput2" placeholder="담당자명" readonly>
-          </div>
-          <div class="m-4" style="text-align:center">
-            <button type="button" class="btn btn-primary" style="width:15%" onclick=location.href="{% url 'rnd:KAERI_case' %}">목록</button>
+        <div class="mb-3">
+          <label for="messageControlTextarea" class="form-label">피드백 요약</label>
+          <textarea class="form-control" id="messageControlTextarea" rows="4" placeholder="내용" readonly></textarea>
+        </div>
+        <div class="mb-4">
+          <label class="form-label" for="inputGroupFile01">검토 보고서</label>
+          <input type="file" class="form-control" id="inputGroupFile01" readonly>
+        </div>
+        <div class="mb-3">
+          <label for="emailControlInput2" class="form-label">담당자</label>
+          <input type="text" class="form-control" id="emailControlInput2" placeholder="담당자명" readonly>
+        </div>
+        <div class="m-4" style="text-align:center">
+          <button type="button" class="btn btn-primary" style="width:15%" onclick=location.href="{% url 'rnd:KAERI_case' %}">목록</button>
 
 
 
-            <button type="button" class="btn btn-soft-dark" style="width:15%" data-bs-toggle="modal" data-bs-target="#deleteModal">삭제</button>
-            <div id="deleteModal" class="modal fade" tabindex="-1" aria-labelledby="deleteModalLabel" style="display: none;" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title mt-0" id="deleteModalLabel">삭제하기</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <p style="margin:1em">삭제한 게시글은 복구 할 수 없습니다. 삭제하시겠습니까?</p>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">취소</button>
-                    <button type="button" class="btn btn-primary waves-effect waves-light" onclick=location.href="{% url 'rnd:KAERI_case' %}">확인</button>
-                  </div>
-                </div><!-- /.modal-content -->
-              </div><!-- /.modal-dialog -->
-            </div><!-- SIMPLE MODALS -->
+          <button type="button" class="btn btn-soft-dark" style="width:15%" data-bs-toggle="modal" data-bs-target="#deleteModal">삭제</button>
+          <div id="deleteModal" class="modal fade" tabindex="-1" aria-labelledby="deleteModalLabel" style="display: none;" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title mt-0" id="deleteModalLabel">삭제하기</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p style="margin:1em">삭제한 게시글은 복구 할 수 없습니다. 삭제하시겠습니까?</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">취소</button>
+                  <button type="button" class="btn btn-primary waves-effect waves-light" onclick=location.href="{% url 'rnd:KAERI_case' %}">확인</button>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div><!-- SIMPLE MODALS -->
 
 
-          </div>
+        </div>
       </div>
     </div>
   </div>
