--- a/templates/rnd/case_detail.html
+++ b/templates/rnd/case_detail.html
@@ -10,6 +10,12 @@
     height: 100px !important;
     max-width: 80% !important;
   }
+
+th {
+  font-weight: 800 !important;
+  background-color: whitesmoke !important;
+}
+
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -19,7 +25,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">검토 내용 작성</h3>
+          <h3 class="mb-4">검토 상세 내용</h3>
 
         </div>
       </div>
@@ -52,37 +58,38 @@
       <div class="col-lg-10">
 
         <div class="p-2" style="display:inline">
-          <label for="dateControlInput" class="form-label">작성 일자</label>
-          <i class="mdi mdi-calendar-clock"></i>2023-04-18
-        </div>
-
-        <div class="p-2" style="display:inline">
-          <label for="dateControlInput" class="form-label">작성자</label>
-          <i class="mdi mdi-account-circle"></i> 홍길동
+          <i class="mdi mdi-calendar-clock"></i> last updated:
         </div>
 
         <div class="border-bottom"></div>
 
 
+        <table class="table table-bordered mb-0">
+          <tbody>
+            <tr>
+              <th>제목</th>
+              <td>KAERI 1차 보고서</td>
+              <th>조회수</th>
+              <td>12</td>
+            </tr>
+            <tr>
+              <th>작성자</th>
+              <td>홍길동</td>
+              <th>작성시간</th>
+              <td>2023-04-18</td>
+            </tr>
+            <tr>
+              <th>첨부파일</th>
+              <td colspan="3"></td>
+            </tr>
+            <tr>
+              <th>내용</th>
+              <td colspan="3" style="height:200px"></td>
+            </tr>
+          </tbody>
+        </table>
 
-        <div class="mb-3">
-          <label for="organization" class="form-label">기관 구분</label>
-          <input type="text" class="form-control" id="" placeholder="KAERI" readonly>
-        </div>
 
-
-        <div class="mb-3">
-          <label for="messageControlTextarea" class="form-label">피드백 요약</label>
-          <textarea class="form-control" id="messageControlTextarea" rows="4" placeholder="내용" readonly></textarea>
-        </div>
-        <div class="mb-4">
-          <label class="form-label" for="inputGroupFile01">검토 보고서</label>
-          <input type="file" class="form-control" id="inputGroupFile01" readonly>
-        </div>
-        <div class="mb-3">
-          <label for="emailControlInput2" class="form-label">담당자</label>
-          <input type="text" class="form-control" id="emailControlInput2" placeholder="담당자명" readonly>
-        </div>
         <div class="m-4" style="text-align:center">
           <button type="button" class="btn btn-primary" style="width:15%" onclick=location.href="{% url 'rnd:KAERI_case' %}">목록</button>
 
