--- a/templates/cloud/bulletin/folder-list.html
+++ b/templates/cloud/bulletin/folder-list.html
@@ -51,7 +51,7 @@
                     <div class="card-body p-4">
                         <ul class="list-unstyled job-Categories-list mb-0">
                             <li>
-                                <a href="{% url 'job-list' %}" class="primary-link">과제협약서<span class="badge bg-soft-info float-end">25</span></a>
+                                <a href="{% url 'folder_detail' %}" class="primary-link">과제협약서<span class="badge bg-soft-info float-end">25</span></a>
                             </li>
                             <li>
                                 <a href="{% url 'job-list' %}" class="primary-link">연구개발계획서<span class="badge bg-soft-info float-end">10</span></a>
