--- a/templates/cloud/bulletin/file-detail.html
+++ b/templates/cloud/bulletin/file-detail.html
@@ -18,6 +18,12 @@
     font-weight: 700 !important;
   }
 
+  .document-list-colored {
+    background: #f0f8ffe6;
+    border: 1px solid aliceblue;
+    border-radius: 15px;
+    padding: 8px;
+  }
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -54,194 +60,160 @@
 <section class="section">
   <div class="container">
     <div class="row">
+
       <div class="col-lg-12">
         <table class="table table-bordered">
-            <tr>
-              <th>제목</th>
-              <td>Mark</td>
-              <th>작성자</th>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th>작성일자</th>
-              <td>Mark</td>
-              <th>조회수</th>
-              <td>@mdo</td>
-            </tr>
+          <tr>
+            <th>제목</th>
+            <td>제목명</td>
+            <th>작성자</th>
+            <td>작성자명</td>
+          </tr>
+          <tr>
+            <th>작성일자</th>
+            <td>2023.06.07</td>
+            <th>최근 수정일</th>
+            <td>2023.06.28</td>
+          </tr>
 
         </table>
       </div>
 
-      <div class="col-lg-4">
-        <div class="card side-bar">
 
-
-          <div class="candidate-profile-overview  card-body border-top p-4">
-            <h6 class="fs-17 fw-semibold mb-3">심층처분 보고서</h6>
-            <ul class="list-unstyled mb-0">
-
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">분류</label>
-                  <div>
-                    <p class="text-muted mb-0">보고서</p>
-                  </div>
-                </div>
-              </li>
-
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">소속</label>
-                  <div>
-                    <p class="text-muted mb-0">신규사업팀</p>
-                  </div>
-                </div>
-              </li>
-
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">작성자</label>
-                  <div>
-                    <p class="text-muted mb-0">홍길동</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">조회</label>
-                  <div>
-                    <p class="text-muted mb-0">12</p>
-                  </div>
-                </div>
-              </li>
-
-
-            </ul>
-
-            <ul class="list-inline d-flex justify-content-between align-items-center">
-              <li class="list-inline-item text-warning review-rating">
-              </li>
-              <li class="list-inline-item mb-0">
-                <div class="favorite-icon">
-                  <a href="javascript:void(0)"><i class="uil uil-folder-plus fs-18"></i></a>
-                </div>
-              </li>
-            </ul>
-          </div>
-
-
-          <div class="candidate-contact-details card-body p-4 border-top">
-            <h6 class="fs-17 fw-semibold mb-3">상세내용</h6>
-            <ul class="list-unstyled mb-0">
-              <li>
-                <div class="d-flex align-items-center mt-4">
-                  <div class="icon bg-soft-primary flex-shrink-0">
-                    <i class="uil uil-envelope-alt"></i>
-                  </div>
-                  <div class="ms-3">
-                    <h6 class="fs-14 mb-1">Email</h6>
-                    <p class="text-muted mb-0">gabrielpalmer@gmail.com</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="d-flex align-items-center mt-4">
-                  <div class="icon bg-soft-primary flex-shrink-0">
-                    <i class="uil uil-map-marker"></i>
-                  </div>
-                  <div class="ms-3">
-                    <h6 class="fs-14 mb-1">Address</h6>
-                    <p class="text-muted mb-0">Dodge City, Louisiana</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="d-flex align-items-center mt-4">
-                  <div class="icon bg-soft-primary flex-shrink-0">
-                    <i class="uil uil-phone"></i>
-                  </div>
-                  <div class="ms-3">
-                    <h6 class="fs-14 mb-1">Phone</h6>
-                    <p class="text-muted mb-0">+1(452) 125-6789</p>
-                  </div>
-                </div>
-              </li>
-
-            </ul>
-          </div>
-          <!--end candidate-overview-->
-        </div>
-        <!--end card-->
-      </div>
-      <!--end col-->
-
-      <div class="col-lg-8">
-        <div class="card candidate-details ms-lg-4 mt-4 mt-lg-0">
+      <div class="col-lg-12">
+        <div class="card candidate-details mt-4 mt-lg-0">
           <div class="card-body p-4 candidate-personal-detail">
 
-            <div class="mt-4 border-bottom pb-4">
-                <h5 class="fs-17 fw-bold mb-3">파일 다운로드</h5>
-                <ul class="profile-document list-unstyled mb-0">
-                    <li>
-                        <div class="profile-document-list d-flex align-items-center mt-4 ">
-                            <div class="icon flex-shrink-0">
-                                <i class="uil uil-file"></i>
-                            </div>
-                            <div class="ms-3">
-                                <h6 class="fs-16 mb-0">Resume.pdf</h6>
-                                <p class="text-muted mb-0">1.25 MB</p>
-                            </div>
-                            <div class="ms-auto">
-                                <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="profile-document-list d-flex align-items-center mt-4 ">
-                            <div class="icon flex-shrink-0">
-                                <i class="uil uil-file"></i>
-                            </div>
-                            <div class="ms-3">
-                                <h6 class="fs-16 mb-0">Cover-letter.pdf</h6>
-                                <p class="text-muted mb-0">1.25 MB</p>
-                            </div>
-                            <div class="ms-auto">
-                                <a href="{% static 'images/dark-logo.png' %}" download="dark-logo" class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="candidate-education-details mt-4 pt-3">
+            <div class="">
               <h6 class="fs-17 fw-bold mb-0">세부 내용</h6>
-              <div class="candidate-education-content mt-4 d-flex">
-                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 06.27 </div>
-                <div class="ms-4">
-                  <h6 class="fs-16 mb-1">필드 수정</h6>
-                  <p class="text-muted">데이터베이스 검색을 위한 제목 필드로 수정 완료하였습니다.</p>
-                </div>
-              </div>
-              <div class="candidate-education-content mt-4 d-flex">
-                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 07.06 </div>
-                <div class="ms-4">
-                  <h6 class="fs-16 mb-1">태그 추가</h6>
-                  <p class="text-muted mb-2">NCS | 홍길동</p>
-                  <p class="text-muted">각 항목별 태그의 수를 5개 이상으로 추가하여 수정하였습니다.</p>
-                </div>
-              </div>
-            </div>
-            <!--end candidate-educat`ion-details-->
 
+
+              <div class="candidate-education-content mt-4 d-flex pb-4 border-bottom">
+                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 2 </div>
+
+                <div class="d-flex flex-column align-items-stretch w-100">
+                  <div class="ms-4">
+                    <div class="d-flex">
+                      <h6 class="fs-16 mb-1">필드 수정</h6>
+                      <p class="fs-12 text-muted mb-0 mx-2">23.06.28 00:00:00</p>
+                    </div>
+                    <p class="text-muted">데이터베이스 검색을 위한 제목 필드 수정 완료하였습니다.</p>
+                  </div>
+                  <ul class="profile-document list-unstyled mb-0">
+                    <li>
+                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
+                        <div class="icon flex-shrink-0">
+                          <i class="uil uil-file"></i>
+                        </div>
+                        <div class="ms-3">
+                          <h6 class="fs-16 mb-0">filename3.pdf</h6>
+                          <p class="text-muted mb-0">1.25 MB</p>
+                        </div>
+                        <div class="ms-auto">
+                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
+                        <div class="icon flex-shrink-0">
+                          <i class="uil uil-file"></i>
+                        </div>
+                        <div class="ms-3">
+                          <h6 class="fs-16 mb-0">filename2s.pdf</h6>
+                          <p class="text-muted mb-0">1.25 MB</p>
+                        </div>
+                        <div class="ms-auto">
+                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+
+              <div class="candidate-education-content mt-4 d-flex pb-4 border-bottom">
+                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 1 </div>
+
+                <div class="d-flex flex-column align-items-stretch w-100">
+                  <div class="ms-4">
+                    <div class="d-flex">
+                      <h6 class="fs-16 mb-1">초안 업로드</h6>
+                      <p class="fs-12 text-muted mb-0 mx-2">23.06.07 12:41:00</p>
+                    </div>
+                    <p class="text-muted">6월 데이터 업데이트</p>
+                  </div>
+                  <ul class="profile-document list-unstyled mb-0">
+                    <li>
+                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
+                        <div class="icon flex-shrink-0">
+                          <i class="uil uil-file"></i>
+                        </div>
+                        <div class="ms-3">
+                          <h6 class="fs-16 mb-0">filename1.pdf</h6>
+                          <p class="text-muted mb-0">1.25 MB</p>
+                        </div>
+                        <div class="ms-auto">
+                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
+                        <div class="icon flex-shrink-0">
+                          <i class="uil uil-file"></i>
+                        </div>
+                        <div class="ms-3">
+                          <h6 class="fs-16 mb-0">filename1.docx</h6>
+                          <p class="text-muted mb-0">1.25 MB</p>
+                        </div>
+                        <div class="ms-auto">
+                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="candidate-education-content mt-4 d-flex">
+                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 0 </div>
+
+                <div class="d-flex flex-column align-items-stretch w-100">
+                  <div class="ms-4">
+                    <div class="d-flex">
+                      <h6 class="fs-16 mb-1">생성</h6>
+                      <p class="fs-12 text-muted mb-0 mx-2">23.06.07 12:41:00</p>
+                    </div>
+                    <p class="text-muted">페이지 생성</p>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <!--end candidate-educat`ion-details-->
+
+            </div>
+            <!--end card-body-->
           </div>
-          <!--end card-body-->
+          <!--end card-->
         </div>
-        <!--end card-->
       </div>
-      <!--end col-->
+
+      <div class="col-lg-12">
+        <a class="btn btn-soft-primary m-2 float-end" href="{% url 'file_list' %}"> 목록으로 </a>
+      </div>
+
     </div>
     <!--end row-->
+
   </div>
   <!--end container-->
+
 </section>
 <!-- END CANDIDATE-DETAILS -->
 {% endblock content %}
