--- a/templates/cloud/bulletin/file-list.html
+++ b/templates/cloud/bulletin/file-list.html
@@ -109,7 +109,7 @@
               <div class="col-lg-2 align-self-center">
                 <ul class="list-inline mt-3 mb-0">
                   <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                    <a href="#" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
+                    <a href="{% url 'file_update' %}" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
                       <i class="uil uil-edit"></i>
                     </a>
                   </li>
