--- a/templates/cloud/bulletin/file-upload.html
+++ b/templates/cloud/bulletin/file-upload.html
@@ -51,7 +51,7 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="bg-soft-primary p-3">
-                                                <h5 class="mb-0 fs-17">Post a New Job!</h5>
+                                                <h5 class="mb-0 fs-17">게시글을 작성하여 파일을 업로드하세요!</h5>
                                         </div>
                                     </div><!--end col-->
                                 </div><!--end row-->
@@ -60,102 +60,65 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="mb-4">
-                                                    <label for="jobtitle" class="form-label">Job Title</label>
+                                                    <label for="jobtitle" class="form-label">제목</label>
                                                     <input type="text" class="form-control" id="jobtitle" placeholder="Title">
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-12">
                                                 <div class="mb-4">
-                                                    <label for="jobdescription" class="form-label">Job Description</label>
-                                                    <textarea class="form-control" id="jobdescription" rows="3" placeholder="Enter Job Description"></textarea>
+                                                    <label for="jobdescription" class="form-label">설명</label>
+                                                    <textarea class="form-control" id="jobdescription" rows="3" placeholder="Description"></textarea>
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-6">
                                                 <div class="mb-4">
-                                                    <label for="email" class="form-label">Email Address</label>
-                                                    <input type="email" class="form-control" id="email" placeholder="Email Address">
+                                                    <label for="email" class="form-label">작성자</label>
+                                                    <input type="email" class="form-control" id="email" placeholder="1234@gmail.com" disabled>
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-6">
                                                 <div class="mb-4">
-                                                    <label for="phoneNumber" class="form-label">Phone Number</label>
-                                                    <input type="number" class="form-control" id="phoneNumber" placeholder="Phone Number">
+                                                    <label for="phoneNumber" class="form-label">연락처</label>
+                                                    <input type="number" class="form-control" id="phoneNumber" placeholder="Tel">
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-6">
                                                 <div class="mb-4">
-                                                    <label for="choices-single-categories" class="form-label">Categories</label>
+                                                    <label for="choices-single-categories" class="form-label">구분</label>
                                                     <select class="form-select" data-trigger="" name="choices-single-categories" id="choices-single-categories" aria-label="Default select example">
-                                                        <option value="ne">Digital & Creative</option>
-                                                        <option value="df">Retail</option>
-                                                        <option value="od">Management</option>
-                                                        <option value="rd">Human Resources</option>
+                                                        <option value="ne">KINS기관 제출 공문</option>
+                                                        <option value="df">참여기관 공유</option>
+                                                        <option value="od">회의일정 및 발표자료</option>
                                                     </select>
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-6">
                                                 <div class="mb-4">
-                                                    <label for="jobtype" class="form-label">Job Type</label>
-                                                    <input type="text" class="form-control" id="jobtype" placeholder="Job type">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="designation" class="form-label">Designation</label>
-                                                    <input type="text" class="form-control" id="designation" placeholder="Designation">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="salary" class="form-label">Salary($)</label>
-                                                    <input type="number" class="form-control" id="salary" placeholder="Salary">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="qualification" class="form-label">Qualification</label>
-                                                    <input type="text" class="form-control" id="qualification" placeholder="Qualification">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="skills" class="form-label">Job Skills </label>
-                                                    <input type="text" class="form-control" id="skills" placeholder="Job skills">
+                                                    <label for="choices-single-categories" class="form-label">폴더명</label>
+                                                    <select class="form-select" data-trigger="" name="choices-single-categories" id="choices-single-categories" aria-label="Default select example">
+                                                        <option value="ne">과제협약</option>
+                                                        <option value="df">연구개발계획서</option>
+                                                        <option value="od">연차보고서</option>
+                                                        <option value="rd">중간보고서</option>
+                                                    </select>
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-12">
                                                 <div class="mb-4">
-                                                    <label for="lastdate" class="form-label">Application Deadline Date</label>
+                                                    <label for="lastdate" class="form-label">작성일자</label>
                                                     <input type="date" class="form-control" id="lastdate">
                                                 </div>
                                             </div><!--end col-->
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-12">
                                                 <div class="mb-4">
-                                                    <label for="choices-single-location" class="form-label">Country</label>
-                                                    <select class="form-select" data-trigger name="choices-single-location" id="choices-single-location" aria-label="Default select example">
-                                                        <option value="ME">Montenegro</option>
-                                                        <option value="MS">Montserrat</option>
-                                                        <option value="MA">Morocco</option>
-                                                        <option value="MZ">Mozambique</option>
-                                                    </select>
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-3">
-                                                <div class="mb-4">
-                                                    <label for="city" class="form-label">City</label>
-                                                    <input type="text" class="form-control" id="city" placeholder="City">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-3">
-                                                <div class="mb-4">
-                                                    <label for="zipcode" class="form-label">Zipcode</label>
-                                                    <input type="text" class="form-control" id="zipcode" placeholder="Zipcode">
+                                                    <label for="lastdate" class="form-label">파일 업로드</label>
+                                                    <input type="file" class="form-control" id="file">
                                                 </div>
                                             </div><!--end col-->
                                             <div class="col-lg-12">
                                                 <div class="text-end">
-                                                    <a href="javascript:void(0)" class="btn btn-success">Back</a>
-                                                    <a href="javascript:void(0)" class="btn btn-primary">Post Now <i class="mdi mdi-send"></i></a>
+                                                    <a href="{% url 'file_list' %}" class="btn btn-success">뒤로가기</a>
+                                                    <a href="javascript:void(0)" class="btn btn-primary">업로드 <i class="mdi mdi-send"></i></a>
                                                 </div>
                                             </div><!--end col-->
                                         </div><!--end row-->
