--- a/templates/cloud/bulletin/folder-list.html
+++ b/templates/cloud/bulletin/folder-list.html
@@ -51,8 +51,8 @@
       <!--end col-->
     </div>
     <!--end row-->
-    <div class="row">
-      <div class="col-lg-4">
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
         <div class="text-center">
           <p class="badge bg-warning fs-14 mb-2">KINS 기관 제출 공문</p>
         </div>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <!--end col-->
-      <div class="col-lg-4">
+      <div class="col-lg-6">
         <div class="text-center">
           <p class="badge bg-warning fs-14 mb-2">참여기관 공유</p>
         </div>
@@ -105,8 +105,9 @@
           </div>
         </div>
       </div>
-      <!--end col-->
-      <div class="col-lg-4">
+
+
+      <div class="col-lg-6 mt-4">
         <div class="text-center">
           <p class="badge bg-warning fs-14 mb-2">회의일정 및 발표자료</p>
         </div>
@@ -132,9 +133,11 @@
           </div>
         </div>
       </div>
+
       <!--end col-->
     </div>
     <!--end row-->
+
   </div>
   <!--end container-->
 </section>
