--- a/templates/partials/rnd_base.html
+++ b/templates/partials/rnd_base.html
@@ -124,7 +124,8 @@
 
   </div>
   <!-- END layout-wrapper -->
-
+  <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'js/pages/switcher.init.js' %}"></script>
   {% block javascript %}
 
   {% endblock javascript %}
