--- a/templates/cloud/bulletin/file-list.html
+++ b/templates/cloud/bulletin/file-list.html
@@ -265,6 +265,10 @@
 
       </div>
       <!--end col-->
+      <div class="col-lg-12 mt-2">
+        <a class="btn btn-soft-primary m-2 float-end" href="{% url 'file_upload' %}"> 글 작성 </a>
+      </div>
+
     </div>
     <!--end row-->
 
