--- a/templates/kinsdb/BRNC/brnc.html
+++ b/templates/kinsdb/BRNC/brnc.html
@@ -111,6 +111,7 @@
       <!-- <p class="text-muted">규제기준 데이터베이스 바로가기</p> -->
 
       <a href="{% url 'regulation_database' %}" class="btn btn-primary">Database 접속</a>
+      <a href="{% url 'upload' %}" class="btn btn-primary mt-2">Data 업로드</a>
 
       <div class="col-lg-12">
         <div class="mt-5">
